# adminflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  notes.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
config/: settings.py
docs/: BRAND.md  DEVELOPMENT.md  WALKTHROUGH.md  dev_notes.md  issues.md
postman/: AdminFlow.postman_collection.json
src/: demo.py  main.py
src/api/: main.py
src/api/middleware/: auth.py
src/api/models/: schemas.py
src/api/routes/: auth.py  groups.py  health.py  migration.py  security.py  systems.py  users.py
src/db/: __init__.py  crud.py  models.py  session.py
src/health_checks/: ad_health.py
src/migration/: ad_migration.py
src/security/: ad_security.py
src/tasks/: __init__.py  celery.py
src/user_management/: ad_user_manager.py  group_management.py
src/utils/: ad_connection.py  azure_ad.py  cache.py  log_config.py  logger.py  network.py  remote_connections.py  scheduler.py  structlog.py
tests/: test_ad_health.py  test_ad_security.py  test_group_manager.py  test_schemas.py  test_user_manager.py
web/: app.py
web/templates/: 404.html  dashboard.html  groups.html  health.html  index.html  jobs.html  login.html  remote.html  security.html  settings.html  systems.html  users.html
