[project]
name = "adminflow"
version = "1.0.0"
description = "Python-based automation system for managing Microsoft Active Directory environments"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "AdminFlow Team", email = "admin@adminflow.dev" }
]
keywords = ["active-directory", "automation", "windows", "identity-management", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "flask>=2.3.0",
    "flask-login>=0.6.0",
    "pyad>=0.5.0",
    "ldap3>=2.9.0",
    "paramiko>=2.12.0",
    "requests>=2.31.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "apscheduler>=3.10.0",
    "colorlog>=6.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    "pyjwt>=2.8.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "pytest-cov>=4.0.0",
    "codecov>=2.0.0",
]

[project.scripts]
adminflow = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]